Implement to change background color and show block pattern

--- a/program.ucf
+++ b/program.ucf
@@ -15,12 +15,12 @@ NET "LED<4>"       LOC = "V19" | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = SLOW
 
 # BUTTON
 NET "BUTTON_NORTH" LOC = "T14" | IOSTANDARD = LVCMOS33 | PULLDOWN | CLOCK_DEDICATED_ROUTE = FALSE;
-#NET "BUTTON_WEST"  LOC = "U15" | IOSTANDARD = LVCMOS33 | PULLDOWN;
-#NET "BUTTON_EAST"  LOC = "T16" | IOSTANDARD = LVCMOS33 | PULLDOWN;
+#NET "BUTTON_WEST"  LOC = "U15" | IOSTANDARD = LVCMOS33 | PULLDOWN | CLOCK_DEDICATED_ROUTE = FALSE;
+NET "BUTTON_EAST"  LOC = "T16" | IOSTANDARD = LVCMOS33 | PULLDOWN | CLOCK_DEDICATED_ROUTE = FALSE;
 NET "BUTTON_SOUTH" LOC = "T15" | IOSTANDARD = LVCMOS33 | PULLDOWN | CLOCK_DEDICATED_ROUTE = FALSE;
 
 #NET "ROT_A" LOC = "T13" | IOSTANDARD = LVTTL | PULLUP | CLOCK_DEDICATED_ROUTE = FALSE;
-#NET "ROT_B" LOC = "R14" | IOSTANDARD = LVTTL | PULLUP;
+#NET "ROT_B" LOC = "R14" | IOSTANDARD = LVTTL | PULLUP | CLOCK_DEDICATED_ROUTE = FALSE;
 
 # LCD
 #NET "LCD_ENABLE"          LOC = "AB4"  | IOSTANDARD = LVCMOS33 | DRIVE = 4 | SLEW = QUIETIO;
