Support 16x12 picture from serial port

--- a/program.ucf
+++ b/program.ucf
@@ -15,7 +15,7 @@ NET "LED<4>"       LOC = "V19" | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = SLOW
 
 # BUTTON
 NET "BUTTON_NORTH" LOC = "T14" | IOSTANDARD = LVCMOS33 | PULLDOWN | CLOCK_DEDICATED_ROUTE = FALSE;
-#NET "BUTTON_WEST"  LOC = "U15" | IOSTANDARD = LVCMOS33 | PULLDOWN | CLOCK_DEDICATED_ROUTE = FALSE;
+NET "BUTTON_WEST"  LOC = "U15" | IOSTANDARD = LVCMOS33 | PULLDOWN | CLOCK_DEDICATED_ROUTE = FALSE;
 NET "BUTTON_EAST"  LOC = "T16" | IOSTANDARD = LVCMOS33 | PULLDOWN | CLOCK_DEDICATED_ROUTE = FALSE;
 NET "BUTTON_SOUTH" LOC = "T15" | IOSTANDARD = LVCMOS33 | PULLDOWN | CLOCK_DEDICATED_ROUTE = FALSE;
 
@@ -50,3 +50,7 @@ NET "VGA_R<2>"  LOC = "B8"  | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = FAST;
 NET "VGA_R<3>"  LOC = "C8"  | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = FAST;
 NET "VGA_HSYNC" LOC = "C11" | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = FAST;
 NET "VGA_VSYNC" LOC = "B11" | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = FAST;
+
+# RS232
+NET "RS232_DCE_RXD" LOC = "E16"  | IOSTANDARD = LVCMOS33;
+NET "RS232_DCE_TXD" LOC = "F15"  | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = SLOW;
